# baxter-klampt-motion

./: CMakeLists.txt  NOTES.txt  README.md  package.xml
resources/: baxterWorld.xml  data.json  dataTest.json
scripts/: baxter_get_configs.py  baxter_klampt_controller.py  baxter_klampt_interface.py  baxter_motion_controller.py  baxter_stack.py  baxter_visual.py  test_world.py
